- renamed CSS classes - fixed PokemonInfo.tsx text overflow - added types - renamed functions to be more readable - removed sending "gameOver" message, instead server sends the name of a winner, if he exists - cleaned the ternary operator mess, replaced it with a function - moved .gifs to /public folder - added default values when opponent is not connected to PokemonInfo.tsx - inactivity timer is more readable with, "INACTIVITY TIMER VALUE" variable

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,9 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: start;
+    white-space: nowrap;
+    overflow: clip;
+    text-overflow: ellipsis;
 }
 
 .healthbardiv {
@@ -119,7 +122,7 @@ p {
     width: 800px;
     border: 3px solid black;
     background-color: #f2ffe6;
-    background-image: url("././assets/background.svg");
+    background-image: url("public/assets/background.svg");
     background-size: 870px;
     background-repeat: no-repeat;
     background-position: center center;
@@ -197,6 +200,8 @@ p {
     justify-content: start;
     color: #FFF9FA;
     z-index: 10;
+    text-shadow: 4px 4px #675879;
+
 }
 
 .text p {
@@ -204,7 +209,7 @@ p {
 }
 
 
-.playerLeft {
+.playerArea {
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -215,7 +220,7 @@ p {
 }
 
 
-.playerRight {
+.opponentArea {
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -240,15 +245,15 @@ p {
 }
 
 
-.playerLeft .playerInfo {
+.playerArea .playerInfo {
 }
 
-.playerRight .playerInfo {
+.opponentArea .playerInfo {
     align-self: start;
 }
 
 
-.playerRightImage {
+.opponentImageContainer {
     width: 150px;
     height: 150px;
     display: flex;
@@ -277,7 +282,7 @@ p {
     z-index: 6;
     pointer-events: none;
 }
-.attackImageLeft {
+.playerAttackAnimation {
     position: absolute;
     z-index: 6;
     pointer-events: none;
